[package]
name = "deadboy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.15.0"
bevy_asset_loader = {version = "0.14.1", features = ["standard_dynamic_assets"]}
bevy_rapier3d = "0.19.0"
rand = "0.8.5"
yurei = "0.2.26"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
